--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "layer": "ts-node-dev --respawn --transpileOnly ./src/layer/app.ts",
+    "function": "ts-node-dev --respawn --transpileOnly ./src/function/app.ts",
+    "component": "ts-node-dev --respawn --transpileOnly ./src/component/app.ts",
+    "test": "node_modules/mocha/bin/mocha -r ts-node/register test/**/*.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.6",
+    "express": "^4.17.1",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/supertest": "^2.0.9",
+    "chai": "^4.2.0",
     "mocha": "^7.1.2",
-    "ts-node": "^8.10.1"
+    "supertest": "^4.0.2",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
   }
 }
