--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.6",
-    "express": "^4.17.1",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -26,6 +25,7 @@
     "mocha": "^7.1.2",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
 }
