--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/supertest": "^2.0.9",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
