--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.3",
     "express": "^4.17.1"
   },
   "devDependencies": {
