--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/sinon": "^9.0.4",
     "@types/supertest": "^2.0.9",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
+    "sinon": "^9.0.2",
+    "sinon-express-mock": "^2.2.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
